--- a/themes/themeLight.css
+++ b/themes/themeLight.css
@@ -8,8 +8,10 @@ body {
   color: #feb;
 }
 
-.button.flickering {
-  border: 0.3vh solid #c29d78;
+@keyframes flickering {
+  0%   {border-color: #543;}
+  50%  {border-color: #c29d78;}
+  100% {border-color: #543;}
 }
 
 .button:disabled {
